--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
 Quick and hacky version of Paketa12's TouchDesigner Elastic grid tutorial in Processing
-Original tutorial: https://www.youtube.com/watch?v=lpGDkOfzP-4&t=614s&ab_channel=paketa12
+Paketa12 TouchDesigner tutorial: https://www.youtube.com/watch?v=lpGDkOfzP-4&t=614s&ab_channel=paketa12
